...
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="FloatingWindowController" customModule="Clocker" customModuleProvider="target">
            <connections>
                <outlet property="leftButton" destination="7ID-ll-0YN" id="Msx-3N-nDQ"/>
                <outlet property="leftField" destination="DHg-ca-UOi" id="eOW-Ml-DE8"/>
                <outlet property="mainTableView" destination="3js-Fl-DdU" id="6Lu-oW-cuZ"/>
                <outlet property="pinButton" destination="KWj-8n-2K0" id="FUW-0f-glB"/>
                <outlet property="preferencesButton" destination="iFk-kj-d5a" id="1bK-Ld-MwV"/>
                <outlet property="reviewView" destination="HBv-Eh-z9y" id="vt7-in-yQF"/>
                <outlet property="rightButton" destination="8oB-ID-Dka" id="s0E-Pp-8Eb"/>
                <outlet property="scrollViewHeight" destination="SQM-7C-DIi" id="bRu-h6-Rvg"/>
                <outlet property="sharingButton" destination="GMo-5B-bnh" id="ocx-7g-Wtp"/>
...
                                            <font key="font" metaFont="systemBold" size="12"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="18" id="8yd-3c-2Nc"/>
                                            <constraint firstAttribute="width" constant="29" id="D7P-eC-faV"/>
                                        </constraints>
                                        <accessibility identifier="FloatingPin"/>
                                        <connections>
                                            <action selector="convertToFloatingWindow:" target="-2" id="qOh-xO-afp"/>
                                        </connections>
                                    </button>
                                    <button toolTip="Copy All Times" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GMo-5B-bnh">
                                        <rect key="frame" x="99" y="7" width="30" height="26"/>
...
