...
        deleteButton.image = themer.remove()
    }
    
    private func setupShortcutObserver() {
        let defaults = NSUserDefaultsController.shared
        recorderControl.setAccessibilityElement(true)
        recorderControl.setAccessibilityIdentifier("ShortcutControl")
        recorderControl.setAccessibilityLabel("ShortcutControl")
        recorderControl.bind(NSBindingName.value,
                             to: defaults,
                             withKeyPath: PreferencesConstants.hotKeyPathIdentifier,
                             options: nil)
        
...
